# Medical_export_DICOM_tool

./: .gitignore.txt  README.md.txt
database/: export_to_xml_file.sql  init_db.sql  sim_db.sql
database/SIM1/1PASS/BakMagda/: dicomStatic_2024_02_07_15_39_52_678_0.dcm
database/SIM1/1PASS/BaranAgnieszka/: dicomStatic_2024_02_07_15_41_12_290_0.dcm
database/SIM1/1PASS/BaranRafal/: dicomStatic_2024_02_07_15_41_14_285_0.dcm  dicomStatic_2024_02_07_15_41_14_285_1.dcm
database/SIM1/1PASS/BaranSandra/: dicomStatic_2024_02_07_15_41_24_929_0.dcm
database/SIM1/1PASS/DabrowskiAmelia/: dicomStatic_2024_02_07_15_41_59_427_0.dcm
database/SIM1/1PASS/DabrowskiAnna/: dicomStatic_2024_02_07_15_40_26_696_0.dcm
database/SIM1/1PASS/DabrowskiEmil/: dicomStatic_2024_02_07_15_39_28_028_0.dcm
database/SIM1/1PASS/DabrowskiHelena/: dicomStatic_2024_02_07_15_41_48_694_0.dcm
database/SIM1/1PASS/DabrowskiKrystian/: dicomStatic_2024_02_07_15_39_22_862_0.dcm
database/SIM1/1PASS/DabrowskiMagda/: dicomStatic_2024_02_07_15_41_16_507_0.dcm
database/SIM1/1PASS/DabrowskiWeronika/: dicomStatic_2024_02_07_15_40_54_867_0.dcm
database/SIM1/1PASS/GrabowskiKarolina/: dicomStatic_2024_02_07_15_41_29_797_0.dcm
docker/: README.md  docker-compose.yml
docker/backend/: dicom_to_DB.cpp  export_to_xml_file.sql  export_xml_query.sql  generate_export_sql.cpp  stats.sql
docker/docker/: Dockerfile
exports/: export.xsd
src/: CMakeLists.txt  README.md  dicom_to_DB.cpp  eksport.txt  generate_stats.cpp  komendy.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
tools/: xml_validation.cpp
(+1001 files in other folders)
